@@ -83,7 +83,7 @@ public class EntityWolf extends EntityTameable {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(18, new Integer(this.getHealth()));
+		this.dataWatcher.addObject(18, Integer.valueOf(this.getHealth()));
 	}
 
 	protected boolean canTriggerWalking() {
