@@ -18,7 +18,7 @@ public class EntitySpider extends EntityMob implements IMob {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(16, new Byte((byte)0));
+		this.dataWatcher.addObject(16, Byte.valueOf((byte)0));
 	}
 
 	public void onLivingUpdate() {
