@@ -53,10 +53,10 @@ public class EntityMinecart extends Entity implements IInventory {
 	}
 
 	protected void entityInit() {
-		this.dataWatcher.addObject(16, new Byte((byte)0));
-		this.dataWatcher.addObject(17, new Integer(0));
-		this.dataWatcher.addObject(18, new Integer(1));
-		this.dataWatcher.addObject(19, new Integer(0));
+		this.dataWatcher.addObject(16, Byte.valueOf((byte)0));
+		this.dataWatcher.addObject(17, Integer.valueOf(0));
+		this.dataWatcher.addObject(18, Integer.valueOf(1));
+		this.dataWatcher.addObject(19, Integer.valueOf(0));
 	}
 
 	public AxisAlignedBB getCollisionBox(Entity entity1) {
